# vim: set noexpandtab:

2014-03-21 Steve
	* Added JVFUncertaintyTool to installMinimalSUSYTools script,
	  necessary for applying the JVF systematic

2014-03-08 Steve
	* Updated MCWeighter
		* Now accepts a TTree for building the sumw map,
		  and has dedicated methods for TTree and TChain
		* TTree arg to constructor no longer default
	* Updated usage of MCWeighter in Susy3LepCutflow
		* Now instantiated and initialized in Init method rather than main.
		  It cannot be initialized in Begin because the tree pointer isn't set.
		  	* This is just one way to initialize the MCWeighter.
			* NOTE: This is explicitly incompatible with PROOF. But then
			  again, I don't think the rest of our code is PROOF-compatible
			  anyway.
	* MCWeighter TODO
		* Update usage in Susy2LepCutflow
		* Change SusyNtAna and SusyNtTools methods to use 
		  MCWeighter behind the scenes.
	* Added second version of template dumpObjects method to SusyNtTools,
	  a version for vectors of objects as well as the original one for
	  vectors of object pointers.

2014-03-03 Steve
	* Code improvements for MCWeighter

2014-03-02 Steve
	* Added full functionality to MCWeighter class
		* getMCWeight, getSumw, getCrossSection, getXsecTimesEff, getPileupWeight
		* Also added methods and enums for controlling the sumw and xsec methods
		* Currently copies the functionality in SusyNtTools. I haven't removed
		  the old approach yet.
	* Made BTagCalib a static pointer in SusyNtTools
		* This is to reduce the number of instantiations of the class
		  and open root files polluting the ROOT space when a user
		  uses many instantiations of SusyNtTools (like I do).
		  If this causes problems for users, I can change it back.
	* Updated Susy3LepCutflow code to use new MCWeighter

2014-02-19 Steve
	* Split up the functionality for weighting the MC
		* Temporary change until everything is moved into MCWeighter
		* Added getSumw, getXsecTimesEff, getPileupWeight to SusyNtTools.